<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Anti Test!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frida"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="140dp" />

    <TextView
        android:id="@+id/frida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="141dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xposed"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:id="@+id/xposed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="188dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debug"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="235dp" />

    <TextView
        android:id="@+id/debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="235dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dualApp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="277dp" />

    <TextView
        android:id="@+id/dualApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="277dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emulator"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="319dp" />

    <TextView
        android:id="@+id/emulator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="319dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/virtualApp"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="357dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/root"
        tools:layout_editor_absoluteX="88dp"
        tools:layout_editor_absoluteY="392dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memDump"
        tools:layout_editor_absoluteX="87dp"
        tools:layout_editor_absoluteY="433dp" />

    <TextView
        android:id="@+id/virtualApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:layout_editor_absoluteX="265dp"
        tools:layout_editor_absoluteY="360dp" />

    <TextView
        android:id="@+id/root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="392dp" />

    <TextView
        android:id="@+id/memDump"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:layout_editor_absoluteX="267dp"
        tools:layout_editor_absoluteY="432dp" />

</androidx.constraintlayout.widget.ConstraintLayout>